<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bilalmirza.xsandos.ResultDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lavender"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/messageText"
            android:gravity="center"
            android:text="@string/results"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/startAgainButton"
            android:textSize="18sp"
            android:textStyle="bold"
            android:backgroundTint="@color/white"
            android:text="@string/start_again"
            android:layout_margin="20dp"
            android:textColor="@color/lavender"
            app:cornerRadius = "20dp"/>

        <Button
            android:id="@+id/changeNameButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:backgroundTint="@color/white"
            android:text="@string/change_names"
            android:textColor="@color/lavender"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="20dp" />

    </LinearLayout>

</RelativeLayout>