<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender"
    tools:context="com.bilalmirza.xsandos.Game_Fragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_above="@id/container"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/playerOneLayout"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/white_box">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/player_one"
                android:id="@+id/TPlayerOneName"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/lavender"
                android:maxLines="1"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/x_big_icon"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:contentDescription="@string/content_desc" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:id="@+id/playerTwoLayout"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/white_box">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/player_two"
                android:id="@+id/TPlayerTwoName"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/lavender"
                android:maxLines="1"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/o_big_icon"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:contentDescription="@string/content_desc"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/container"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:contentDescription="@string/content_desc"
                android:padding="20dp"/>

            <ImageView
                android:id="@+id/image2"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:contentDescription="@string/content_desc"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image3"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:contentDescription="@string/content_desc"
                android:padding="20dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/image4"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:contentDescription="@string/content_desc"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image5"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:contentDescription="@string/content_desc"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image6"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:contentDescription="@string/content_desc"
                android:padding="20dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/image7"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:contentDescription="@string/content_desc"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image8"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:contentDescription="@string/content_desc"
                android:padding="20dp" />

            <ImageView
                android:id="@+id/image9"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/white_box"
                android:contentDescription="@string/content_desc"
                android:padding="20dp" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>